src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Notes__c</fullName>
        <label>Account Notes</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Reference__c</fullName>
        <description>Hotel ID for CRS negotiated rate</description>
        <inlineHelpText>The ID for the hotel to reference our negotiated rate</inlineHelpText>
        <label>Account Reference</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Adjoining_Rooms__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hotel has adjoining rooms</description>
        <inlineHelpText>Check if hotel has adjoining rooms</inlineHelpText>
        <label>Adjoining Rooms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allows_Pets__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does the hotel allow pets?</description>
        <inlineHelpText>Does the hotel allow pets?</inlineHelpText>
        <label>Allows Pets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Area_of_Responsibility__c</fullName>
        <label>Area of Responsibility</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assigned_Map__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Map</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Owner_Assignment_Map__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>RM</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Owner_Assignment_Map__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Communication_Preferences__c</fullName>
        <description>Used by Houston to determine how billing documents should be sent to the insurance account.</description>
        <label>Billing Communication Preferences</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Email_Instructions__c</fullName>
        <label>Billing Email Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Email__c</fullName>
        <label>Billing Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CC_Billing_Email__c</fullName>
        <label>CC Billing Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CC_Email__c</fullName>
        <label>CC Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Collateral_Not_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This office does not accept marketing collateral (when checked)</inlineHelpText>
        <label>Collateral Not Accepted by Acct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Collateral_Opt_Out_Verified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collateral Opt Out Verified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Collateral_Opt_Out_Verified_On__c</fullName>
        <label>Collateral Opt Out Verified On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Consolidated_Hotel_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consolidated Hotel Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_First_Name__c</fullName>
        <description>When the contact is created this is the value that will go into the first name field</description>
        <label>Contact First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Last_Name__c</fullName>
        <description>When the contact is created this is the value that will go into the last name field</description>
        <label>Contact Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Owner_Override__c</fullName>
        <label>Contact Owner Override</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Always RM</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Always TSM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contracted_Hotel__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this hotel contracted with CRS?</inlineHelpText>
        <label>Contracted Hotel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copy_Billing_Address_to_Physical_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the billing address will be copied to the Physical Address when the record is saved</description>
        <inlineHelpText>If checked, the billing address will be copied to the Physical Address when the record is saved</inlineHelpText>
        <label>Copy Billing Address to Physical Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Mail_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This office does not accept unsolicited mail (when checked)</inlineHelpText>
        <label>Do Not Mail Acct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Instructions__c</fullName>
        <label>Email Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>The email address of the landlord.</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Food_Not_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This office does not accept food (when checked)</inlineHelpText>
        <label>Food Not Accepted by Acct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Food_Opt_Out_Verified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Food Opt Out Verified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Food_Opt_Out_Verified_On__c</fullName>
        <label>Food Opt Out Verified On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Front_Desk_Email__c</fullName>
        <label>Front Desk Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Full_Kitchen__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hotel has a kitchen</description>
        <inlineHelpText>Select if hotel has rooms with kitchenettes.</inlineHelpText>
        <label>Full Kitchen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gift_Opt_Out_Verified_On__c</fullName>
        <label>Gift Opt Out Verified On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gift_Opt_Out_Verified_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gift Opt Out Verified by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gifts_Not_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This office does not accept gifts (when checked)</inlineHelpText>
        <label>Gifts Not Accepted by Acct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hotel_Rating__c</fullName>
        <label>Hotel Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hotel_Sales_Manager__c</fullName>
        <description>Hotel Sales Manager</description>
        <inlineHelpText>Name of the Hotel Sales Manager for contract questions.</inlineHelpText>
        <label>Hotel Sales Manager</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hotel_Star_Rating__c</fullName>
        <formula>IMAGE( 
CASE(  Hotel_Rating__c , 
&quot;1&quot;, &quot;/img/samples/stars_100.gif&quot;,
&quot;2&quot;, &quot;/img/samples/stars_200.gif&quot;,
&quot;3&quot;, &quot;/img/samples/stars_300.gif&quot;, 
&quot;4&quot;, &quot;/img/samples/stars_400.gif&quot;, 
&quot;5&quot;, &quot;/img/samples/stars_500.gif&quot;, 
&quot;/img/samples/stars_000.gif&quot;), 
&quot;rating&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hotel Star Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hotel_Tax_ID__c</fullName>
        <description>Tax ID number for hotel account</description>
        <inlineHelpText>Tax ID number for hotel account</inlineHelpText>
        <label>Hotel Tax ID</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_Opt_Out_Verified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mail Opt Out Verified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mail_Opt_Out_Verified_On__c</fullName>
        <label>Mail Opt Out Verified On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Markup_Rule__c</fullName>
        <label>Markup Rule</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_PTID__c</fullName>
        <externalId>true</externalId>
        <label>Migration_PTID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Migration_VendorID__c</fullName>
        <externalId>true</externalId>
        <label>Migration_VendorID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <description>Mobile phone number.</description>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NTV_CC_Emails__c</fullName>
        <description>List of email address that will get CC on NTV notifications</description>
        <label>NTV CC Emails</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>National_Account_Code__c</fullName>
        <label>National Account Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AAA</fullName>
                </value>
                <value>
                    <fullName>ALL</fullName>
                </value>
                <value>
                    <fullName>ASSURANT</fullName>
                </value>
                <value>
                    <fullName>CFIN</fullName>
                </value>
                <value>
                    <fullName>FARM</fullName>
                </value>
                <value>
                    <fullName>FEMA</fullName>
                </value>
                <value>
                    <fullName>HAN</fullName>
                </value>
                <value>
                    <fullName>LIB</fullName>
                </value>
                <value>
                    <fullName>LUXPRO</fullName>
                </value>
                <value>
                    <fullName>MER</fullName>
                </value>
                <value>
                    <fullName>NJM</fullName>
                </value>
                <value>
                    <fullName>POLICY</fullName>
                </value>
                <value>
                    <fullName>QBE</fullName>
                </value>
                <value>
                    <fullName>SAFE</fullName>
                </value>
                <value>
                    <fullName>STATE</fullName>
                </value>
                <value>
                    <fullName>TRAV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>National_Account_Name__c</fullName>
        <label>National Account Name</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>National_Account__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Allstate</fullName>
                </value>
                <value>
                    <fullName>The Hartford</fullName>
                </value>
                <value>
                    <fullName>State Farm</fullName>
                </value>
                <value>
                    <fullName>Zurich NA</fullName>
                </value>
                <value>
                    <fullName>Safeco</fullName>
                </value>
                <value>
                    <fullName>American Family</fullName>
                </value>
                <value>
                    <fullName>FEMA</fullName>
                </value>
                <value>
                    <fullName>Liberty Mutual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>National_Account__c</fullName>
        <label>National Account</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Office_Regional_Reference__c</fullName>
        <inlineHelpText>This is how the National Account office defines which region they cover</inlineHelpText>
        <label>Regional Reference</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>National_Account_Name__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Anchorage</fullName>
                </value>
                <value>
                    <fullName>Atlanta RCO</fullName>
                </value>
                <value>
                    <fullName>Brookfield</fullName>
                </value>
                <value>
                    <fullName>CAT Team</fullName>
                </value>
                <value>
                    <fullName>Colorado Technical</fullName>
                </value>
                <value>
                    <fullName>Columbus</fullName>
                </value>
                <value>
                    <fullName>Denver</fullName>
                </value>
                <value>
                    <fullName>Encompass Specialty</fullName>
                </value>
                <value>
                    <fullName>Florida Property</fullName>
                </value>
                <value>
                    <fullName>Glen Falls</fullName>
                </value>
                <value>
                    <fullName>Hawaii Property</fullName>
                </value>
                <value>
                    <fullName>Hudson Property</fullName>
                </value>
                <value>
                    <fullName>Illinois Property</fullName>
                </value>
                <value>
                    <fullName>Kansas City Technical</fullName>
                </value>
                <value>
                    <fullName>Lake Success Property MCO</fullName>
                </value>
                <value>
                    <fullName>Michigan Property</fullName>
                </value>
                <value>
                    <fullName>Mid-Loss</fullName>
                </value>
                <value>
                    <fullName>Monmouth Junction</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>No. Cal Property</fullName>
                </value>
                <value>
                    <fullName>Northwest</fullName>
                </value>
                <value>
                    <fullName>Omaha</fullName>
                </value>
                <value>
                    <fullName>Pilot</fullName>
                </value>
                <value>
                    <fullName>Quincy</fullName>
                </value>
                <value>
                    <fullName>Rancho Cordova</fullName>
                </value>
                <value>
                    <fullName>Reading</fullName>
                </value>
                <value>
                    <fullName>So. Cal Property</fullName>
                </value>
                <value>
                    <fullName>Tempe Cental Property</fullName>
                </value>
                <value>
                    <fullName>Twin City</fullName>
                </value>
                <value>
                    <fullName>Valley Forge Property</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opt_Out_Notes__c</fullName>
        <label>Acct Opt Out Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Owner_Full_Name__c</fullName>
        <formula>Owner.FirstName  &amp;&quot; &quot;&amp;  Owner.LastName</formula>
        <label>Owner Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pet_Notes__c</fullName>
        <description>Specifications on pets allowed.</description>
        <inlineHelpText>Specifications on pets allowed.</inlineHelpText>
        <label>Pet Notes</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Address__c</fullName>
        <description>Physical address of the landlord.</description>
        <label>Physical Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_City__c</fullName>
        <description>The city of the physical address.</description>
        <label>City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Country__c</fullName>
        <label>Country</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_State__c</fullName>
        <description>The state of the physical address.</description>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Zip__c</fullName>
        <description>The zip code of the physical address.</description>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Priority Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Procurement_Reporting_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Procurement Reporting Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reset_Owner_Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reset Owner Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SalesLogix_Account_ID__c</fullName>
        <label>SalesLogix Account ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesLogix_Account_Record_Owner__c</fullName>
        <label>SalesLogix Account Record Owner</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signed_Docs_Required_for_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to ensure that we don&apos;t try to invoice Allstate/Farmers without a THA/Lease on file.</description>
        <label>Signed Docs Required for Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Smoking_Rooms__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hotel has smoking rooms</description>
        <inlineHelpText>Check if hotel has smoking rooms</inlineHelpText>
        <label>Smoking Rooms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Special_Invoice_Style__c</fullName>
        <label>Special Invoice Style</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All items broken out on same invoice</fullName>
                </value>
                <value>
                    <fullName>Mark-up on separate invoice</fullName>
                </value>
                <value>
                    <fullName>Mark-up on separate line, same invoice</fullName>
                </value>
                <value>
                    <fullName>Nationwide</fullName>
                </value>
                <value>
                    <fullName>Travelers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Exempt_After_30_Days__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hotel is tax exempt after 30 days.</description>
        <inlineHelpText>Check if hotel is tax exempt after 30 days.</inlineHelpText>
        <label>Tax Exempt After 30 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_Exempt__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check box if the landlord is tax exempt</description>
        <inlineHelpText>Please check the box if the landlord is tax exempt on the W-9.</inlineHelpText>
        <label>Tax Exempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_ID__c</fullName>
        <description>Tax ID of the landlord from the W-9</description>
        <inlineHelpText>Please type the Tax ID from the W-9.</inlineHelpText>
        <label>Tax ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Name__c</fullName>
        <description>Name on the W-9.</description>
        <inlineHelpText>Type in the name from the W-9.</inlineHelpText>
        <label>Tax Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Rate__c</fullName>
        <description>Hotel&apos;s Tax Rate</description>
        <inlineHelpText>Hotel&apos;s Tax Rate Percentage</inlineHelpText>
        <label>Tax Rate</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Twitter_ID__c</fullName>
        <description>Acount Twitter ID - this field may need to be deleted if it is not being used</description>
        <label>Twitter ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>W9__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check when we have a W9 uploaded for a hotel account</description>
        <inlineHelpText>Check when we have a W9 uploaded for a hotel account</inlineHelpText>
        <label>W9</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tdc_tvte__Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllAccounts_Physical_City_Mathews</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.ADDRESS2_CITY</field>
            <operation>equals</operation>
            <value>Mathews</value>
        </filters>
        <label>All Accounts - Physical City=Mathews</label>
    </listViews>
    <listViews>
        <fullName>All_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.InsuranceCompanies</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>notEqual</operation>
            <value>Public Adjuster</value>
        </filters>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>Corporate_Headquarters</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>Corporate Headquarters</value>
        </filters>
        <label>Corporate Headquarters</label>
    </listViews>
    <listViews>
        <fullName>Farmers_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>startsWith</operation>
            <value>Farmers</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Farmers Accounts</label>
    </listViews>
    <listViews>
        <fullName>Landlord_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Tax_Name__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Active__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Landlord_Accounts</value>
        </filters>
        <label>Landlord Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>UK_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.ADDRESS2_COUNTRY</field>
            <operation>equals</operation>
            <value>UK</value>
        </filters>
        <label>UK Accounts</label>
    </listViews>
    <recordTypes>
        <fullName>Business_Account</fullName>
        <active>true</active>
        <label>Business Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Competitor</fullName>
        <active>true</active>
        <label>Competitor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contractor</fullName>
        <active>true</active>
        <label>Contractor</label>
    </recordTypes>
    <recordTypes>
        <fullName>HotelAccounts</fullName>
        <active>true</active>
        <description>Hotels such as Hilton, Marriott, Residence Inn, Radisson</description>
        <label>Hotel Accounts</label>
    </recordTypes>
    <recordTypes>
        <fullName>Household_Accounts</fullName>
        <active>true</active>
        <description>Account record used for policyholder contacts.</description>
        <label>Household Accounts</label>
    </recordTypes>
    <recordTypes>
        <fullName>InsuranceCompanies</fullName>
        <active>true</active>
        <description>Insurance companies such as Allstate, Nationwide, State Farm, Farmers and Safeco</description>
        <label>Insurance Companies</label>
    </recordTypes>
    <recordTypes>
        <fullName>Landlord_Accounts</fullName>
        <active>true</active>
        <description>Accounts for Landlords</description>
        <label>Landlord Accounts</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vendor</fullName>
        <active>true</active>
        <label>Vendor</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Billing_Address_Required</fullName>
        <active>true</active>
        <description>Billing address is required</description>
        <errorConditionFormula>AND($RecordType.Name  =    &quot;Landlord Accounts&quot;, OR(LEN(BillingStreet)=0,LEN(BillingCity)=0,
LEN(BillingCountry)=0,
LEN(BillingPostalCode)=0)
)</errorConditionFormula>
        <errorMessage>You must enter a complete Billing Address.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Billing_Country</fullName>
        <active>true</active>
        <description>Billing Country must be 3 letters or more</description>
        <errorConditionFormula>AND(LEN(BillingCountry) &lt;&gt; 0, LEN(BillingCountry) &lt; 3)</errorConditionFormula>
        <errorDisplayField>BillingCountry</errorDisplayField>
        <errorMessage>Billing Country must be 3 letters or more</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Billing_Country_Required</fullName>
        <active>false</active>
        <description>Billing Country must be entered</description>
        <errorConditionFormula>ISBLANK( BillingCountry )</errorConditionFormula>
        <errorDisplayField>BillingCountry</errorDisplayField>
        <errorMessage>You must enter a Billing Country</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Billing_PostalCode_Canada</fullName>
        <active>true</active>
        <description>Makes sure the postal code is in the correct format</description>
        <errorConditionFormula>AND(
LOWER(BillingCountry) = &quot;canada&quot;,NOT(LEN( BillingPostalCode)=0),
NOT(REGEX( BillingPostalCode ,
&quot;((?i)[ABCEGHJKLMNPRSTVXY]\\d[A-Z]?\\s?\\d[A-Z]\\d)?&quot;)))</errorConditionFormula>
        <errorDisplayField>BillingPostalCode</errorDisplayField>
        <errorMessage>Billing Zip/Postal Code must be in A9A 9A9 format.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Billing_Province_Country</fullName>
        <active>true</active>
        <description>Makes sure billing province code is valid for the billing country</description>
        <errorConditionFormula>AND(LEN(BillingState) = 2,CONTAINS(&quot;AL:AK:AZ:AR:CA:CO:CT:DE:DC:FL:GA:HI:ID:&quot; &amp;
 &quot;IL:IN:IA:KS:KY:LA:ME:MD:MA:MI:MN:MS:MO:MT:NE:NV:NH:&quot; &amp; 
&quot;NJ:NM:NY:NC:ND:OH:OK:OR:PA:RI:SC:SD:TN:TX:UT:VT:VA:&quot; &amp; 
&quot;WA:WV:WI:WY:VI:GU;PR&quot;,BillingState),LOWER(BillingCountry)  = &quot;canada&quot;)</errorConditionFormula>
        <errorDisplayField>BillingState</errorDisplayField>
        <errorMessage>The current Billing State/Province is invalid for the current Billing Country.  Valid provinces are ON, QC, NS, NB, MB, PE, NL, AB, BC, SK</errorMessage>
    </validationRules>
</CustomObject>